@@ -1,4 +1,7 @@
 Changes for APR 1.3.0
+  *) Add some documentation on the format matched by apr_fnmatch.
+     [David Glasser <glasser mit.edu>]
+
   *) Add apr_hash_clear.  [Daniel L. Rall <dlr apache.org>]
 
   *) Don't try to build apr_app.c on MinGW.
